--- a/packages/default/sass-lint.yml
+++ b/packages/default/sass-lint.yml
@@ -1,52 +1,53 @@
 options:
-    verbose: true
+  verbose: true
 
 files:
-    include: 'scss/**/*.scss'
-    ignore:
-        - 'scss/mixins/**/*.scss'
+  include: "scss/**/*.scss"
+  ignore:
+    - "scss/mixins/**/*.scss"
 
 rules:
-    no-ids: 2
-    property-sort-order: 0
-    mixins-before-declarations: 0
+  no-ids: 2
+  property-sort-order: 0
+  mixins-before-declarations: 0
 
-    nesting-depth:
-        - 1
-        - max-depth: 4
+  nesting-depth:
+    - 1
+    - max-depth: 4
 
-    indentation:
-        - 2
-        - size: 4
+  indentation:
+    - 1
+    - size: 4
 
-    force-element-nesting: 0
-    force-attribute-nesting: 0
-    force-pseudo-nesting: 0
+  force-element-nesting: 0
+  force-attribute-nesting: 0
+  force-pseudo-nesting: 0
 
-    no-vendor-prefixes: 0
+  no-vendor-prefixes: 0
 
-    no-css-comments: 2
-    no-color-keywords: 0
-    no-color-literals: 0
-    hex-length:
-        - 2
-        - style: long
-    no-misspelled-properties: 0
-    no-trailing-whitespace: 2
-    no-qualifying-elements: 0
+  no-css-comments: 2
+  no-color-keywords: 0
+  no-color-literals: 0
+  hex-length:
+    - 2
+    - style: long
+  no-misspelled-properties: 0
+  no-trailing-whitespace: 2
+  no-qualifying-elements: 0
 
-    pseudo-element: 2
+  pseudo-element: 2
 
-    final-newline:
-        - 2
-        - include: true
-    empty-args: 0
-    empty-line-between-blocks: 0
-    placeholder-in-extend: 0
-    quotes:
-        - 2
-        - style: double
-    space-between-parens: 0
-    shorthand-values: 0
-    no-empty-rulesets: 0
-    url-quotes: 2
+  final-newline:
+    - 2
+    - include: true
+  empty-args: 0
+  empty-line-between-blocks: 0
+  placeholder-in-extend: 0
+  quotes:
+    - 2
+    - style: double
+  space-between-parens: 0
+  shorthand-values: 0
+  no-empty-rulesets: 0
+  url-quotes: 2
+  leading-zero: 0
